added payment request endpoint. fixed docker and docker compose. fixed and regen'd swagger
