# docs/swagger.json
@@ -14,6 +14,56 @@
     "host": "localhost:8443",
     "basePath": "/api",
     "paths": {
+        "/api/v1/payment/{paymentID}": {
+            "get": {
+                "description": "Creates a payment request based on a payment id (the identifier for an invoice).",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Payment"
+                ],
+                "summary": "Request to pay an invoice and receive back outputs to use when constructing the payment transaction",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Payment ID",
+                        "name": "paymentID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "contains outputs, merchant data and expiry information, used by the payee to construct a transaction",
+                        "schema": {
+                            "$ref": "#/definitions/payd.PaymentRequestResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "returned if the user input is invalid, usually an issue with the paymentID",
+                        "schema": {
+                            "$ref": "#/definitions/payd.ClientError"
+                        }
+                    },
+                    "404": {
+                        "description": "returned if the paymentID has not been found",
+                        "schema": {
+                            "$ref": "#/definitions/payd.ClientError"
+                        }
+                    },
+                    "500": {
+                        "description": "returned if there is an unexpected internal error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/balance": {
             "get": {
                 "description": "Returns current balance, which is a sum of unspent txos",
@@ -44,7 +94,8 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Destinations"
+                    "Destinations",
+                    "Receive"
                 ],
                 "summary": "Given an invoiceID, a set of outputs and fees will be returned, if not found a 404 is returned.",
                 "parameters": [
@@ -314,6 +365,9 @@
         }
     },
     "definitions": {
+        "bt.FeeQuote": {
+            "type": "object"
+        },
         "envelope.JSONEnvelope": {
             "type": "object",
             "properties": {
@@ -376,11 +430,69 @@
                 }
             }
         },
+        "payd.P4Destination": {
+            "type": "object",
+            "properties": {
+                "outputs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/payd.P4Output"
+                    }
+                }
+            }
+        },
+        "payd.P4Output": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "script": {
+                    "type": "string"
+                }
+            }
+        },
         "payd.PayRequest": {
             "type": "object",
             "properties": {
                 "payToURL": {
                     "type": "string"
+                }
+            }
+        },
+        "payd.PaymentRequestResponse": {
+            "type": "object",
+            "properties": {
+                "creationTimestamp": {
+                    "type": "string"
+                },
+                "destinations": {
+                    "$ref": "#/definitions/payd.P4Destination"
+                },
+                "expirationTimestamp": {
+                    "type": "string"
+                },
+                "fees": {
+                    "$ref": "#/definitions/bt.FeeQuote"
+                },
+                "memo": {
+                    "type": "string"
+                },
+                "merchantData": {
+                    "$ref": "#/definitions/payd.User"
+                },
+                "network": {
+                    "type": "string"
+                },
+                "paymentURL": {
+                    "type": "string"
+                },
+                "spvRequired": {
+                    "type": "boolean",
+                    "example": true
                 }
             }
         },
@@ -398,9 +510,7 @@
                 },
                 "extendedData": {
                     "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
+                    "additionalProperties": true
                 },
                 "id": {
                     "type": "integer"
